--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-minify": "^1.0.0",
+    "morgan": "^1.10.0",
     "ws": "^7.4.4"
   },
   "devDependencies": {
