--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-minify": "^1.0.0",
+    "express-useragent": "^1.0.15",
     "morgan": "^1.10.0",
     "ws": "^7.4.4"
   },
