--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ $RECYCLE.BIN/
 
 # End of
 # https://www.toptal.com/developers/gitignore/api/node,macos,windows,visualstudiocode
+#
+
+statistics.json
